2004-10-29  Paolo Bonzini  <bonzini@gnu.org>

	* internal.h: fix formatting.

2004-03-04  Paolo Bonzini  <bonzini@gnu.org>

	* regcomp.c: fix bugs in is_endline.

2004-02-29  Paolo Bonzini  <bonzini@gnu.org>

	* regperl.c, regposix.c: move common functions...
	* regcomp.c: ... here.

2004-02-29  Paolo Bonzini  <bonzini@gnu.org>

	* internal.h: add OP_ANCHOR_MATCH, ESC_G.
	* regdebug.c: Likewise.
	* regexec.c: Likewise.
	* regperl.c: Likewise.
	* regposix.c: Likewise.
	* regstudy.c: Likewise.

2004-01-15  Paolo Bonzini  <bonzini@gnu.org>

	* regexp.c: drop regexec2, replace with REG_STARTEND
	found in NetBSD regexp.
	* regexp.h: likewise.

2003-09-19  Paolo Bonzini  <bonzini@gnu.org>

	* regposix.c: recognize \s and \S.

	* regposix.c: compile (a){0,2} to (a)?(a)? instead
	of ((a)?(a))? so that it is possible to...
	* regexec.c: not assign offsets to optional brackets
	which match nothing, e.g. when matching (b?){1,2} to
	`b'.  Actually, we do assign offsets the first time;
	this does not hamper the POSIXicity of ssed because
	anyway we don't get the wrong substitution for the
	backreference on the RHS: e.g. if you have
	s/(b?)?/<\1>/ with an empty pattern space, you'll get
	<> in the pattern space no matter if \1 did not match
	or if it matched the empty string at offsets [0,0).

2003-01-03  Paolo Bonzini  <bonzini@gnu.org>

	* regtables.c (pcre_maketables): add [:blank:]
	* internal.h (cbit_blank): new
	* regperl.c: add [:blank:]
	* regposix.c: add [:blank:]

2002-09-18  Paolo Bonzini  <bonzini@gnu.org>

	* regposix.c (pcre_posix_compile_nuls): fix
	error in determining length of .{1,64}
	* regperl.c (pcre_perl_compile_nuls): likewise

2002-01-06  Paolo Bonzini  <bonzini@gnu.org>

	* regdebug.c: add _ONCE repetitions
	* regexec.c: likewise
	* regstudy.c: likewise
	* internal.h: likewise

2001-12-31  Paolo Bonzini  <bonzini@gnu.org>

	** Version 3.55 released

	* regposix.c (check_escape): inside a character class,